--- a/MiningExpansion/GameData/MiningExpansion/Localization/en-us.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Localization/en-us.cfg
@@ -15,6 +15,9 @@ Localization
 
 	#LOC_SMX_Mk2Generator_Name = Mk2 Multi-Fuel Generator
 	#LOC_SMX_MK2Generator_desc = A Mk2 fuselage mounted heavy-duty electric generator for when fuelcells just simply aren't enough to meet a vessel's power requirements. This unit fills the middle ground between fuelcells and nuclear reactors, producing more power than the former without the weight and cost of the latter. Like its smaller bretheren, this unit uses LiquidFuel/Oxidizer to produce power, but unlike them, it can also use raw Ore, though at reduced efficiency.
+
+	#LOC_SMX_Mk2generator_NoOre_desc = Need electricity but don't have the space to radially attach Fuel Cells? The Mk2 Fuel Cell generator offers the same easy power generation that Fuel Cells offer, but in a convenient Mk2 fuselage section.  Like the smaller fuel cells, this generator operates by converting fuel and oxidizer into energy.
+
 	#LOC_SMX_MK2Generator_Tags = array bank charge convert e/c elect energ pack power volt watt
 
 	#LOC_SMX_InlinDrill_Name = 'Prospector' Aerospace Mining Excavator
@@ -31,7 +34,7 @@ Localization
 
 	#LOC_SMX_Driver0_title = EMMD-8 "Onager" Mass Driver
 	#LOC_SMX_Driver1_title = EMMD-32 "Trebuchet" Mass Driver
-	#LOC_SMX_Driver_desc = An experimental thruster design that generates thrust by electromagnetically propelling dust, gravel, and other debris resulting as a by-product of orbital mining. While the system generates low thrust, substantial waste heat, and an even larger power bill, unlike chemical engines it can take advantage of ISRU sourced propellant without the need for large and bulky ISRU converters to process it into a usable form.
+	#LOC_SMX_Driver_desc = An experimental thruster design that generates thrust by electromagnetically propelling dust, gravel, and other debris resulting as a by-product of orbital mining. While the system generates low thrust, substantial waste heat, and an even larger power bill; unlike chemical engines it can take advantage of ISRU sourced propellant without the need for large and bulky ISRU converters to process it into a usable form.
 	#LOC_SMX_Driver_tags = ( mass drive efficient engine ( isru probe thruster vacuum ore
 	
 	#LOC_SMX_Size0Generator_Name = Small Fuel Cell Generator
@@ -79,6 +82,9 @@ Localization
 
 	#LOC_SMX_Size2generator_Name = Large Multi-Fuel Generator 
 	#LOC_SMX_Size2generator_desc = A heavy-duty electric generator for when standard fuelcells just simply aren't enough to meet a vessel's power requirements. This unit fills the middle ground between fuelcells and nuclear reactors, producing more power than the former without the weight and cost of the latter. Like its smaller bretheren, this unit uses LiquidFuel/Oxidizer to produce power, but unlike them, it can also use raw Ore, though at reduced efficiency.
+
+	#LOC_SMX_Size2generator_NoOre_desc = A heavy-duty electric generator for when standard fuelcells just simply aren't enough to meet a vessel's power requirements. This generator offers the same easy power generation that Fuel Cells offer, but in a convenient 2.5 meter housing. Like the smaller fuel cells, this generator operates by converting fuel and oxidizer into energy.
+
 	#LOC_SMX_Size2generator_tags = array bank charge convert e/c elect energ pack power volt watt
 
 	#LOC_SMX_Size2Drill_Name = 'Terravore' Stack Mining Excavator
@@ -98,4 +104,36 @@ Localization
 	#LOC_SMX_Size3Drill_name = 'Lithoquake' Stack Mining Excavator
 	#LOC_SMX_Size3Drill_desc = The largest ventral mount heavy mining excavator marketed by the CEC. Like its smaller bretheren, it is designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating.  Radiators can be used to help manage excessive heat. 
 	#LOC_SMX_Size3Drill_tags = drill extractor harvest isru mine )mining (ore resource
+
+	#LOC_SMX_StartOE = Start Pump 
+	#LOC_SMX_StopOE = Stop Pump 
+	#LOC_SMX_OE = Oceanic Extractor
+	#LOC_SMX_ToggleOE = Toggle Pump
+
+	#LOC_SMX_StartFC = Start Generator (LF/O)
+	#LOC_SMX_StopFC = Stop Generator (LF/O)
+	#LOC_SMX_FC = Generator (LF/O)
+	#LOC_SMX_ToggleFC = Toggle Generator (LF/O)
+
+	#LOC_SMX_StartOFC = Start Generator (Ore)
+	#LOC_SMX_StopOFC = Stop Generator (Ore)
+	#LOC_SMX_OFC = Generator (Ore)
+	#LOC_SMX_ToggleOFC = Toggle Generator (Ore)
+
+	#LOC_SMX_StartACOx = Start Condenser (Ox)
+	#LOC_SMX_StopACOx = Stop Condenser (Ox)
+	#LOC_SMX_ACOx = Condenser (Ox)
+	#LOC_SMX_ToggleACOx = Toggle Condenser (Ox)
+
+	#LOC_SMX_StartACXe = Start Gas Separator (Xe)
+	#LOC_SMX_StopACXe = Stop Gas Separator (Xe)
+	#LOC_SMX_ACXe = Xenon Filter 
+	#LOC_SMX_ToggleACXe = Toggle Condenser (Xe)
+
+	#LOC_SMX_StartAC = Start <<1>>
+	#LOC_SMX_StopAC = Stop <<1>>
+	#LOC_SMX_AC = Condenser
+
+
+
 }
