--- a/MiningExpansion/GameData/MiningExpansion/Parts/Mk2Generator/part.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Mk2Generator/part.cfg
@@ -43,9 +43,10 @@ tags = #LOC_SMX_MK2Generator_Tags
 	MODULE
 	{
 		 name = ModuleResourceConverter
-		 ConverterName = Generator (LF/O)
-		 StartActionName = Start Generator (LF/0)
-		 StopActionName = Stop Generator (LF/0)
+		 ConverterName = #LOC_SMX_FC
+		 StartActionName = #LOC_SMX_StartFC
+		 StopActionName = #LOC_SMX_StopFC 
+		 ToggleActionName = #LOC_SMX_ToggleFC
 		 FillAmount = 0.95
 		 AutoShutdown = false
 		GeneratesHeat = true
@@ -90,9 +91,10 @@ tags = #LOC_SMX_MK2Generator_Tags
 	MODULE
 	{
 		 name = ModuleResourceConverter
-		 ConverterName = Generator (Ore)
-		 StartActionName = Start Generator (Ore)
-		 StopActionName = Stop Generator (Ore)
+		 ConverterName = #LOC_SMX_OFC
+		 StartActionName = #LOC_SMX_StartOFC
+		 StopActionName = #LOC_SMX_StopOFC 
+		 ToggleActionName = #LOC_SMX_ToggleOFC
 		 FillAmount = 0.95
 		AutoShutdown = false
 		GeneratesHeat = true
