--- a/MiningExpansion/GameData/MiningExpansion/Parts/Mk2ISRUDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Mk2ISRUDrill/Drill.cfg
@@ -33,9 +33,7 @@ tags = #LOC_SMX_InlineDril_Tags
 
 	MODEL
 	{
-		model = MiningExpansion/Parts/Mk2ISRUDrill/Model
-		texture = mk2FuselageShort, Squad/Parts/FuelTank/mk2FuselageShort/mk2FuselageShort
-		texture = TriBitDrill, Squad/Parts/Resources/RadialDrill/TriBitDrill
+		model = MiningExpansion/Parts/Assets/Mk2Drill
 	}
 	MODULE
 	{
@@ -47,9 +45,10 @@ tags = #LOC_SMX_InlineDril_Tags
 		HarvesterType = 0
 		Efficiency = 1.0
 		ResourceName = Ore
-		ConverterName = Surface Harvester
-		StartActionName = Start Surface Harvester
-		StopActionName = Stop Surface Harvester
+		ConverterName = #autoLOC_502038 
+		StartActionName = #autoLOC_502039 
+		StopActionName = #autoLOC_502040 
+		ToggleActionName = #autoLOC_502041 
 		ImpactTransform = ImpactTransform
 		ImpactRange = 3
 		AutoShutdown = true
@@ -89,8 +88,9 @@ tags = #LOC_SMX_InlineDril_Tags
 	{
 		name = ModuleAsteroidDrill
 		DirectAttach = false
-		StartActionName = Start Asteroid Harvester 
-		StopActionName = Stop Asteroid Harvester
+		StartActionName = #autoLOC_502042 
+		StopActionName = #autoLOC_502043 
+		ToggleActionName = #autoLOC_502044
 		PowerConsumption = 1.5
 		Efficiency = 3.5
 		ImpactRange = 3
@@ -128,7 +128,10 @@ tags = #LOC_SMX_InlineDril_Tags
 		name = ModuleAnimationGroup
 		deployAnimationName = Deploy_Drill
 		activeAnimationName = Drill_Running
-		moduleType = Drill
+		deployActionName = #autoLOC_6002390 
+		retractActionName = #autoLOC_6002391 
+		toggleActionName = #autoLOC_6002392 
+		moduleType = #autoLOC_7001228 	
 	}	
 	MODULE
 	{
