--- a/MiningExpansion/GameData/MiningExpansion/Parts/Mk2Refinery/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Mk2Refinery/ISRU.cfg
@@ -45,9 +45,9 @@ description = #LOC_SMX_MK2Refinery_Desc
 	MODULE
 	{
 		 name = ModuleResourceConverter
-		 ConverterName = Lf+Ox
-		 StartActionName = Start ISRU [Lf+Ox]
-		 StopActionName = Stop ISRU [Lf+Ox]	 
+		 ConverterName = #autoLOC_502026 
+		 StartActionName = #autoLOC_502027 
+		 StopActionName = #autoLOC_502028 	 
 		AutoShutdown = true
 		TemperatureModifier
 		{
@@ -109,9 +109,9 @@ description = #LOC_SMX_MK2Refinery_Desc
 	MODULE
 	{
 		 name = ModuleResourceConverter
-		 ConverterName = Monoprop
-		 StartActionName = Start ISRU [Monoprop]
-		 StopActionName = Stop ISRU [Monoprop]
+		 ConverterName = #autoLOC_502029 //#autoLOC_502029 = Monoprop
+		 StartActionName = #autoLOC_502030 //#autoLOC_502030 = Start ISRU [Monoprop]
+		 StopActionName = #autoLOC_502031 //#autoLOC_502031 = Stop ISRU [Monoprop]
 		AutoShutdown = true
 		TemperatureModifier
 		{
@@ -164,9 +164,9 @@ description = #LOC_SMX_MK2Refinery_Desc
 	MODULE
 	{
 		 name = ModuleResourceConverter
-		 ConverterName = LiquidFuel
-		 StartActionName = Start ISRU [LqdFuel]
-		 StopActionName = Stop ISRU [LqdFuel]
+		 ConverterName = #autoLOC_502032 //#autoLOC_502032 = LiquidFuel
+		 StartActionName = #autoLOC_502033 //#autoLOC_502033 = Start ISRU [LqdFuel]
+		 StopActionName = #autoLOC_502034 //#autoLOC_502034 = Stop ISRU [LqdFuel]
 		AutoShutdown = true
 		TemperatureModifier
 		{
@@ -221,9 +221,9 @@ description = #LOC_SMX_MK2Refinery_Desc
 	MODULE
 	{
 		 name = ModuleResourceConverter
-		 ConverterName = Oxidizer
-		 StartActionName = Start ISRU [Ox]
-		 StopActionName = Stop ISRU [Ox]
+		 ConverterName = #autoLOC_502035 //#autoLOC_502035 = Oxidizer
+		 StartActionName = #autoLOC_502036 //#autoLOC_502036 = Start ISRU [Ox]
+		 StopActionName = #autoLOC_502037 //#autoLOC_502037 = Stop ISRU [Ox]
 		AutoShutdown = true
 		TemperatureModifier
 		{
@@ -279,7 +279,10 @@ description = #LOC_SMX_MK2Refinery_Desc
 		name = ModuleAnimationGroup
 		deployAnimationName = 
 		activeAnimationName = 
-		moduleType = Converter
+		deployActionName = #autoLOC_6002380 //#autoLOC_6002380 = Deploy <<1>>
+		retractActionName = #autoLOC_6002381 //#autoLOC_6002381 = Retract <<1>>
+		toggleActionName = #autoLOC_6002382 //#autoLOC_6002382 = Toggle <<1>>
+		moduleType = #autoLOC_7001227  //Converter //#autoLOC_7001227 = Converter
 		autoDeploy = true
 	}
 	
