--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0StackDrill/Drill.cfg
@@ -31,10 +31,7 @@ tags = #LOC_SMX_Size0Drill_tags
 
 MODEL
 	{
-		model = MiningExpansion/Parts/Size0StackDrill/Model
-   		texture = ksp_r_rockProbe_diff,Squad/Parts/Resources/MiniDrill/ksp_r_rockProbe_diff
-		texture = ServiceBay, Squad/Parts/Utility/ServiceBay/ServiceBay
-		texture = DustParticle, MiningExpansion/Parts/Size0StackDrill/DustParticle
+		model = MiningExpansion/Parts/Assets/Size0SDrill
 	}
 
 	MODULE
@@ -47,9 +44,10 @@ MODEL
 		HarvesterType = 0
 		Efficiency = 0.3
 		ResourceName = Ore
-		ConverterName = Surface Harvester
-		StartActionName = Start Surface Harvester
-		StopActionName = Stop Surface Harvester
+		ConverterName = #autoLOC_502038 //#autoLOC_502038 = Surface Harvester
+		StartActionName = #autoLOC_502039 //#autoLOC_502039 = Start Surface Harvester
+		StopActionName = #autoLOC_502040 //#autoLOC_502040 = Stop Surface Harvester
+		ToggleActionName = #autoLOC_502041 //#autoLOC_502041 = Toggle Surface 
 		ImpactTransform = impactTransform
 		ImpactRange = 5
 		AutoShutdown = true
@@ -89,8 +87,9 @@ MODEL
 	{
 		name = ModuleAsteroidDrill
 		DirectAttach = false
-		StartActionName = Start Asteroid Harvester 
-		StopActionName = Stop Asteroid Harvester
+		StartActionName = #autoLOC_502042 //#autoLOC_502042 = Start Asteroid Harvester
+		StopActionName = #autoLOC_502043 //#autoLOC_502043 = Stop Asteroid Harvester
+		ToggleActionName = #autoLOC_502044 //#autoLOC_502044 = Toggle Asteroid
 		PowerConsumption = 0.3
 		Efficiency = 1
 		ImpactRange = 1.5
