--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1InlineDrill/InlineDrill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1InlineDrill/InlineDrill.cfg
@@ -11,11 +11,7 @@ node_stack_bottom = 0.0, -0.9764016, 0.0, 0.0, -1.0, 0.0, 1
 
 MODEL
 	{
-		model = MiningExpansion/Parts/Size1InlineDrill/Model
-		texture = mk2CargoBay, Squad/Parts/Utility/mk2CargoBay/mk2CargoBay
-		texture = ServiceBay, Squad/Parts/Utility/ServiceBay/ServiceBay
-		texture = TriBitDrill, Squad/Parts/Resources/RadialDrill/TriBitDrill
-		texture = DustParticle, MiningExpansion/Parts/Size1InlineDrill/DustParticle
+		model = MiningExpansion/Parts/Assets/Size1IDrill
 	}
 
 
@@ -50,9 +46,10 @@ tags = #LOC_SMX_Size1InlineDrill_tags
 		HarvesterType = 0
 		Efficiency = 1
 		ResourceName = Ore
-		ConverterName = Surface Harvester
-		StartActionName = Start Surface Harvester
-		StopActionName = Stop Surface Harvester
+		ConverterName = #autoLOC_502038 //#autoLOC_502038 = Surface Harvester
+		StartActionName = #autoLOC_502039 //#autoLOC_502039 = Start Surface Harvester
+		StopActionName = #autoLOC_502040 //#autoLOC_502040 = Stop Surface Harvester
+		ToggleActionName = #autoLOC_502041 //#autoLOC_502041 = Toggle Surface
 		ImpactTransform = ImpactTransform
 		ImpactRange = 3.5
 		AutoShutdown = true
@@ -91,8 +88,9 @@ tags = #LOC_SMX_Size1InlineDrill_tags
 	{
 		name = ModuleAsteroidDrill
 		DirectAttach = false
-		StartActionName = Start Asteroid Harvester 
-		StopActionName = Stop Asteroid Harvester
+		StartActionName = #autoLOC_502042 //#autoLOC_502042 = Start Asteroid Harvester
+		StopActionName = #autoLOC_502043 //#autoLOC_502043 = Stop Asteroid Harvester
+		ToggleActionName = #autoLOC_502044 //#autoLOC_502044 = Toggle Asteroid
 		PowerConsumption = 1.5
 		Efficiency = 3
 		ImpactRange = 3.5
@@ -130,7 +128,10 @@ tags = #LOC_SMX_Size1InlineDrill_tags
 		name = ModuleAnimationGroup
 		deployAnimationName = Unpack
 		activeAnimationName = Running
-		moduleType = Drill
+		deployActionName = #autoLOC_6002384 //#autoLOC_6002384 = Deploy <<1>>
+		retractActionName = #autoLOC_6002385 //#autoLOC_6002385 = Retract <<1>>
+		toggleActionName = #autoLOC_6002386 //#autoLOC_6002386 = Toggle <<1>>
+		moduleType = #autoLOC_7001228 //#autoLOC_7001228 = Drill	
 	}	
 	
 	MODULE
