--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackDrill/Drill.cfg
@@ -30,10 +30,7 @@ maxTemp = 2000 // = 3000
 tags = #LOC_SMX_Size1Drill_tags
 MODEL
 	{
-		model = MiningExpansion/Parts/Size1StackDrill/Model
-		texture = ksp_s_processorSmall_diff, Squad/Parts/Resources/MiniISRU/ksp_s_processorSmall_diff
-		texture = TriBitDrill, Squad/Parts/Resources/RadialDrill/TriBitDrill
-		texture = DustParticle, MiningExpansion/Parts/Size1InlineDrill/DustParticle
+		model = MiningExpansion/Parts/Assets/Size1SDrill
 	}
 
 	MODULE
@@ -46,9 +43,10 @@ MODEL
 		HarvesterType = 0
 		Efficiency = 5
 		ResourceName = Ore
-		ConverterName = Surface Harvester
-		StartActionName = Start Surface Harvester
-		StopActionName = Stop Surface Harvester
+		ConverterName = #autoLOC_502038 //#autoLOC_502038 = Surface Harvester
+		StartActionName = #autoLOC_502039 //#autoLOC_502039 = Start Surface Harvester
+		StopActionName = #autoLOC_502040 //#autoLOC_502040 = Stop Surface Harvester
+		ToggleActionName = #autoLOC_502041 //#autoLOC_502041 = Toggle Surface
 		ImpactTransform = ImpactTransform
 		ImpactRange = 5
 		AutoShutdown = true
@@ -88,8 +86,9 @@ MODEL
 	{
 		name = ModuleAsteroidDrill
 		DirectAttach = false
-		StartActionName = Start Asteroid Harvester 
-		StopActionName = Stop Asteroid Harvester
+		StartActionName = #autoLOC_502042 //#autoLOC_502042 = Start Asteroid Harvester
+		StopActionName = #autoLOC_502043 //#autoLOC_502043 = Stop Asteroid Harvester
+		ToggleActionName = #autoLOC_502044 //#autoLOC_502044 = Toggle Asteroid
 		PowerConsumption = 1.5
 		Efficiency = 9
 		ImpactRange = 5
@@ -127,7 +126,10 @@ MODEL
 		name = ModuleAnimationGroup
 		deployAnimationName = Unpack
 		activeAnimationName = Drill_Running
-		moduleType = Drill
+		deployActionName = #autoLOC_6002384 //#autoLOC_6002384 = Deploy <<1>>
+		retractActionName = #autoLOC_6002385 //#autoLOC_6002385 = Retract <<1>>
+		toggleActionName = #autoLOC_6002386 //#autoLOC_6002386 = Toggle <<1>>
+		moduleType = #autoLOC_7001228 //#autoLOC_7001228 = Drill
 	}	
 	MODULE
 	{
