--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackPump/OceanicExtractor.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackPump/OceanicExtractor.cfg
@@ -30,9 +30,7 @@ maxTemp = 2000 // = 3000
 tags = #LOC_SMX_Size1Pump_tags
 MODEL
 	{
-		model = MiningExpansion/Parts/Size1StackPump/Model
-		texture = Processor_Large, Squad/Parts/Resources/ISRU/Processor_Large
-		texture = TriBitDrill, Squad/Parts/Resources/RadialDrill/TriBitDrill
+		model = MiningExpansion/Parts/Assets/Size1SPump
 	}
 
 	MODULE
@@ -41,9 +39,10 @@ MODEL
 		HarvesterType = 1
 		Efficiency = 1
 		ResourceName = Ore
-		ConverterName = Oceanic Extractor
-		StartActionName = Start Pump
-		StopActionName = Stop Pump
+		ConverterName = #LOC_SMX_OE
+		StartActionName = #LOC_SMX_StartOE 
+		StopActionName = #LOC_SMX_StopOE 
+		ToggleActionName = #LOC_SMX_ToggleOE
 	 INPUT_RESOURCE
 	 {
 		ResourceName = ElectricCharge
@@ -72,6 +71,9 @@ MODEL
 		name = ModuleAnimationGroup
 		deployAnimationName = 125PumpUnpack
 		activeAnimationName = 
-		moduleType = Pump
+		deployActionName = #autoLOC_6002384 //#autoLOC_6002384 = Deploy <<1>>
+		retractActionName = #autoLOC_6002385 //#autoLOC_6002385 = Retract <<1>>
+		toggleActionName = #autoLOC_6002386 //#autoLOC_6002386 = Toggle <<1>>
+		moduleType = #autoLOC_7001228 //#autoLOC_7001228 = Drill
 	}	
 }
