--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0ISRU/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0ISRU/ISRU.cfg
@@ -19,7 +19,7 @@ subcategory = 0
 title = #LOC_SMX_Size0Converter_Name
 manufacturer = #LOC_SMX_manufacturer_title
 description = #LOC_SMX_Size0Converter_desc
-attachRules = 1,1,1,0,0
+attachRules = 1,0,1,1,0
 
 // --- standard part parameters ---
 mass = 0.65
@@ -44,9 +44,9 @@ MODEL
 	MODULE
 	{
 		 name = ModuleResourceConverter
-		 ConverterName = Monoprop
-		 StartActionName = Start ISRU [Monoprop]
-		 StopActionName = Stop ISRU [Monoprop]
+		 ConverterName = #autoLOC_502045 //#autoLOC_502045 = MonoPropellant
+		 StartActionName = #autoLOC_502046 //#autoLOC_502046 = Start ISRU [MonoProp]
+		 StopActionName = #autoLOC_502047 //#autoLOC_502047 = Stop ISRU [MonoProp]
 		AutoShutdown = true
 		TemperatureModifier
 		{
@@ -99,9 +99,9 @@ MODEL
 	MODULE
 	{
 		 name = ModuleResourceConverter
-		 ConverterName = Lf+Ox
-		 StartActionName = Start ISRU [Lf+Ox]
-		 StopActionName = Stop ISRU [Lf+Ox]	 
+		 ConverterName = #autoLOC_502026 //#autoLOC_502026 = Lf+Ox
+		 StartActionName = #autoLOC_502027 //#autoLOC_502027 = Start ISRU [Lf+Ox]
+		 StopActionName = #autoLOC_502028 //#autoLOC_502028 = Stop ISRU [Lf+Ox]	 
 		AutoShutdown = true
 		TemperatureModifier
 		{
@@ -165,9 +165,9 @@ MODEL
 	MODULE
 	{
 		 name = ModuleResourceConverter
-		 ConverterName = LiquidFuel
-		 StartActionName = Start ISRU [LqdFuel]
-		 StopActionName = Stop ISRU [LqdFuel]
+		 ConverterName = #autoLOC_502032 //#autoLOC_502032 = LiquidFuel
+		 StartActionName = #autoLOC_502033 //#autoLOC_502033 = Start ISRU [LqdFuel]
+		 StopActionName = #autoLOC_502034 //#autoLOC_502034 = Stop ISRU [LqdFuel]
 		AutoShutdown = true
 		TemperatureModifier
 		{
@@ -224,9 +224,9 @@ MODEL
 	MODULE
 	{
 		name = ModuleResourceConverter
-		ConverterName = Oxidizer
-		StartActionName = Start ISRU [Ox]
-		StopActionName = Stop ISRU [Ox]
+		ConverterName = #autoLOC_502035 //#autoLOC_502035 = Oxidizer
+		StartActionName = #autoLOC_502036 //#autoLOC_502036 = Start ISRU [Ox]
+		StopActionName = #autoLOC_502037 //#autoLOC_502037 = Stop ISRU [Ox]
 		AutoShutdown = true
 		TemperatureModifier
 		{
