--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1Driver/part.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1Driver/part.cfg
@@ -13,7 +13,7 @@ PART
 	subcategory = 0
 	title = #LOC_SMX_Driver0_title
 	manufacturer = #LOC_SMX_manufacturer_title
-	description = #LOC_SMX_Driver0_desc
+	description = #LOC_SMX_Driver_desc
 	attachRules = 1,1,1,1,0
 	mass = 1.2
 	// heatConductivity = 0.06 // half default
