--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size2AtmCondenser/part.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size2AtmCondenser/part.cfg
@@ -59,9 +59,10 @@ TechRequired = experimentalScience
 		HarvesterType = 2
 		Efficiency = 0.232
 		ResourceName = Oxidizer
-		ConverterName = Oxidizer
-		StartActionName = Start Condenser (Ox)
-		StopActionName = Stop Condenser (ox)
+		ConverterName = #LOC_SMX_ACOx 
+		StartActionName = #LOC_SMX_StartACOx
+		StopActionName = #LOC_SMX_StopACOx 
+		ToggleActionName = #LOC_SMX_ToggleACOx 
 	 	INPUT_RESOURCE
 	 	{
 			ResourceName = ElectricCharge
@@ -75,9 +76,10 @@ TechRequired = experimentalScience
 		HarvesterType = 2
 		Efficiency = 4
 		ResourceName = XenonGas
-		ConverterName = Xenon Filter
-		StartActionName = Start Gas Separation(Xe)
-		StopActionName = Stop Gas Separation(Xe)
+		ConverterName = #LOC_SMX_ACXe
+		StartActionName = #LOC_SMX_StartACXe
+		StopActionName = #LOC_SMX_StopACXe 
+		ToggleActionName = #LOC_SMX_ToggleACXe
 	 	INPUT_RESOURCE
 	 	{
 			ResourceName = ElectricCharge
@@ -89,7 +91,10 @@ TechRequired = experimentalScience
 		name = ModuleAnimationGroup
 		deployAnimationName = condenserchill
 		activeAnimationName = 
-		moduleType = Condenser
+		deployActionName = #LOC_SMX_StartAC
+		retractActionName = #LOC_SMX_StopAC
+		toggleActionName = #autoLOC_6002382 //#autoLOC_6002382 = Toggle <<1>>
+		moduleType = #LOC_SMX_AC
 	}
 }
 
