--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size2Generator/Generator.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size2Generator/Generator.cfg
@@ -43,9 +43,10 @@ tags = #LOC_SMX_Size2generator_tags
 	MODULE
 	{
 		 name = ModuleResourceConverter
-		 ConverterName = Fuel Cell
-		 StartActionName = Start Fuel Cell
-		 StopActionName = Stop Fuel Cell
+		 ConverterName = #LOC_SMX_FC 
+		 StartActionName = #LOC_SMX_StartFC
+		 StopActionName = #LOC_SMX_StopFC 
+		 ToggleActionName = #LOC_SMX_ToggleFC 
 		 FillAmount = 0.95
 		AutoShutdown = false
 		GeneratesHeat = true
@@ -91,9 +92,10 @@ tags = #LOC_SMX_Size2generator_tags
 	MODULE
 	{
 		 name = ModuleResourceConverter
-		 ConverterName = Generator (Ore)
-		 StartActionName = Start Generator (Ore)
-		 StopActionName = Stop Generator (Ore)
+		 ConverterName = #LOC_SMX_OFC 
+		 StartActionName = #LOC_SMX_StartOFC
+		 StopActionName = #LOC_SMX_StopOFC 
+		 ToggleActionName = #LOC_SMX_ToggleOFC 
 		 FillAmount = 0.95
 		AutoShutdown = false
 		GeneratesHeat = true
