--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
@@ -46,9 +46,9 @@ MODEL
 	MODULE
 	{
 		 name = ModuleResourceConverter
-		 ConverterName = Lf+Ox
-		 StartActionName = Start ISRU [Lf+Ox]
-		 StopActionName = Stop ISRU [Lf+Ox]	 
+		 ConverterName = #autoLOC_502026 //#autoLOC_502026 = Lf+Ox
+		 StartActionName = #autoLOC_502027 //#autoLOC_502027 = Start ISRU [Lf+Ox]
+		 StopActionName = #autoLOC_502028 //#autoLOC_502028 = Stop ISRU [Lf+Ox]	 
 		AutoShutdown = true
 		TemperatureModifier
 		{
@@ -110,9 +110,9 @@ MODEL
 	MODULE
 	{
 		 name = ModuleResourceConverter
-		 ConverterName = Monoprop
-		 StartActionName = Start ISRU [Monoprop]
-		 StopActionName = Stop ISRU [Monoprop]
+		 ConverterName = #autoLOC_502029 //#autoLOC_502029 = Monoprop
+		 StartActionName = #autoLOC_502030 //#autoLOC_502030 = Start ISRU [Monoprop]
+		 StopActionName = #autoLOC_502031 //#autoLOC_502031 = Stop ISRU [Monoprop]
 		AutoShutdown = true
 		TemperatureModifier
 		{
@@ -165,9 +165,9 @@ MODEL
 	MODULE
 	{
 		 name = ModuleResourceConverter
-		 ConverterName = LiquidFuel
-		 StartActionName = Start ISRU [LqdFuel]
-		 StopActionName = Stop ISRU [LqdFuel]
+		 ConverterName = #autoLOC_502032 //#autoLOC_502032 = LiquidFuel
+		 StartActionName = #autoLOC_502033 //#autoLOC_502033 = Start ISRU [LqdFuel]
+		 StopActionName = #autoLOC_502034 //#autoLOC_502034 = Stop ISRU [LqdFuel]
 		AutoShutdown = true
 		TemperatureModifier
 		{
@@ -222,9 +222,9 @@ MODEL
 	MODULE
 	{
 		 name = ModuleResourceConverter
-		 ConverterName = Oxidizer
-		 StartActionName = Start ISRU [Ox]
-		 StopActionName = Stop ISRU [Ox]
+		 ConverterName = #autoLOC_502035 //#autoLOC_502035 = Oxidizer
+		 StartActionName = #autoLOC_502036 //#autoLOC_502036 = Start ISRU [Ox]
+		 StopActionName = #autoLOC_502037 //#autoLOC_502037 = Stop ISRU [Ox]
 		AutoShutdown = true
 		TemperatureModifier
 		{
@@ -280,7 +280,10 @@ MODEL
 		name = ModuleAnimationGroup
 		deployAnimationName = 
 		activeAnimationName = Processing
-		moduleType = Converter
+		deployActionName = #autoLOC_6002380 //#autoLOC_6002380 = Deploy <<1>>
+		retractActionName = #autoLOC_6002381 //#autoLOC_6002381 = Retract <<1>>
+		toggleActionName = #autoLOC_6002382 //#autoLOC_6002382 = Toggle <<1>>
+		moduleType = #autoLOC_7001227  //Converter //#autoLOC_7001227 = Converter
 		autoDeploy = true
 	}
 	
