--- a/MiningExpansion/GameData/MiningExpansion/Parts/Mk2ISRUDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Mk2ISRUDrill/Drill.cfg
@@ -27,8 +27,8 @@ dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 2
-crashTolerance = 7
-maxTemp = 2000 // = 3000
+crashTolerance = 50 // 7
+maxTemp = 2500 // 2000 // = 3000
 tags = #LOC_SMX_InlineDril_Tags 
 
 	MODEL
