--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
@@ -27,8 +27,9 @@ dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 2
-crashTolerance = 7
-maxTemp = 2000 // = 3500
+crashTolerance = 50 // 7
+maxTemp = 2700 // 2000 // = 3000
+bulkheadprofile - size3
 tags = #LOC_SMX_Size3ISRU_tags
 MODEL
 	{
