--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size3OreTank/HugeTank.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size3OreTank/HugeTank.cfg
@@ -28,7 +28,7 @@ dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 2
-bulkheadprofile - size3
+bulkheadProfile - size3, srf
 crashTolerance = 7
 maxTemp = 2000 // = 3000
 tags = #LOC_SMX_Size3OreTank_tags
