--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
@@ -29,7 +29,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 50 // 7
 maxTemp = 2700 // 2000 // = 3000
-bulkheadprofile - size3
+bulkheadProfile - size3, srf
 tags = #LOC_SMX_Size3ISRU_tags
 MODEL
 	{
