--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size2StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size2StackDrill/Drill.cfg
@@ -26,7 +26,8 @@ dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 2
-crashTolerance = 7
+bulkheadProfile - size2, srf
+crashTolerance = 50 // 7
 maxTemp = 2000 // = 3000
 tags = #LOC_SMX_Size2Drill_tags
 MODEL
