--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size2Generator/Generator.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size2Generator/Generator.cfg
@@ -36,7 +36,8 @@ dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 2
-crashTolerance = 7
+bulkheadProfile - size2, srf
+crashTolerance = 50 // 7
 maxTemp = 2000 // = 3000
 tags = #LOC_SMX_Size2generator_tags
 
