--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size2Driver/part.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size2Driver/part.cfg
@@ -23,6 +23,7 @@ PART
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
+	bulkheadProfile - size2, srf
 	crashTolerance = 7
 	maxTemp = 2000 // = 3600
 	bulkheadProfiles = Size0
