--- a/MiningExpansion/GameData/MiningExpansion/Localization/en-us.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Localization/en-us.cfg
@@ -99,7 +99,7 @@ Localization
 	#LOC_SMX_Size3OreTank_desc = A large tank that can be used for storing raw materials.  Not to be used as a bouncy castle.
 	#LOC_SMX_Size3OreTank_tags = black isru mine )mining (ore resource store
 
-	#LOC_SMX_Size0Klaw_name = Mini Grabbing UNit
+	#LOC_SMX_Size0Klaw_name = Mini Grabbing Unit
 
 	#LOC_SMX_Size3Drill_name = 'Lithoquake' Stack Mining Excavator
 	#LOC_SMX_Size3Drill_desc = The largest ventral mount heavy mining excavator marketed by the CEC. Like its smaller bretheren, it is designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating.  Radiators can be used to help manage excessive heat. 
